--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -90,6 +90,16 @@ a, button {
       #company-directory-footer #icon-row a:hover {
         color: #1d0707; }
 
+#toast-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
 .toast-red {
   box-shadow: 0 0 2px #911c1c, 0 0 6px #911c1c, 0 0 10px red;
   border: 1px solid #911c1c;
