--- a/libs/scss/styles.scss
+++ b/libs/scss/styles.scss
@@ -157,6 +157,18 @@ a, button {
 
 // Toast Styling
 
+#toast-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999; // Make sure this is higher than the modal z-index
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 // Define color variables for .toast-red and .toast-green
 $toastRed: #911c1c;
 $toastRedBrighter: red;
